learn-kubernetes-minikube/exemples-network-policies/ex-03-autre-simple-netwrk-policy/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    name: frontend-ns

---
apiVersion: v1
kind: Namespace
metadata:
  name: backend-ns
  labels:
    name: backend-ns
