learn-kubernetes-minikube/exemples-network-policies/ex-03-autre-simple-netwrk-policy/frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend
  namespace: frontend-ns
  labels: 
    app: frontend
spec:
  containers:
    - name: frontend
      image: curlimages/curl:8.10.1
      command: ["sleep", "3600"]
