learn-kubernetes-minikube/exemples-network-policies/ex-03-autre-simple-netwrk-policy/backend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backend
  namespace: backend-ns
  labels: 
    app: backend
spec:
  containers:
    - name: backend
      image: hashicorp/http-echo:0.2.3
      args: ["-text=Hello Backend"]
      ports:
        - containerPort: 5678

---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: backend-ns
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 5678
      targetPort: 5678
